Fixed alignment of play button on stream previews

--- a/src/styles/content/featured.less
+++ b/src/styles/content/featured.less
@@ -49,7 +49,7 @@
 		}
 	}
 
-	.preview {
+	.big-image {
 		width: 59%;
 		.stream-hover();
 	}
